# infrastructure-as-code-with-opentofu

./: .gitignore  README.md  docker-compose.yaml
01-basics/01-providers-and-resources/: providers.tf  s3.tf
01-basics/02-variables/: providers.tf  s3.tf  variables.tf
01-basics/02-variables-and-outputs/: .env.example  outputs.tf  providers.tf  variables.tf
01-basics/03-destroy-infra/: .env.example  03-01-upload-file.sh  03-02-delete-file.sh  outputs.tf  providers.tf  s3.tf  variables.tf
01-basics/03-locals/: s3.tf  variables.tf
01-basics/04-outputs/: variables.tf
01-basics/05-destroy/: outputs.tf  s3.tf  variables.tf
02-state/01-02-rename-and-rm-resource/: outputs.tf  providers.tf  s3.tf  variables.tf
02-state/03-import-resource/: .env.example  s3.tf  variables.tf
02-state/04-generate-config/: .env.example  variables.tf
02-state/05-remote-state/: providers.tf  s3.tf  state.tf  variables.tf
03-deploy-web-app/01-aws/: .env.example  ec2.tf  networking.tf  outputs.tf  providers.tf  rds.tf  state.tf  username.tf  variables.tf
04-terragrunt/: README.md
apps/: Caddyfile  Caddyfile.prod  Caddyfile.prod.tftpl
apps/backend/todos/: Makefile  alembic.ini  pyproject.toml  start.sh
apps/backend/todos/alemebic/: env.py
apps/backend/todos/alemebic/versions/: f12043922600_add_todo_table.py
apps/backend/todos/src/todos/: dependencies.py  main.py  todos.py
apps/backend/todos/src/todos/db/: session.py  settings.py
scripts/: delete-key-in-s3.sh  empty-and-delete-s3-bucket.sh  upload-file-to-s3.sh
sh-lib/: colors.sh  requirements.sh  s3.sh
(+121 files in other folders)
