[project]
name = "todos"
version = "0.1.0"
description = ""
authors = [
    {name = "Patrick Mölk",email = "patrick@patrick-moelk.eu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard] (>=0.124.0,<0.125.0)"
]

[tool.poetry]
packages = [{include = "todos", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
